[project]
name = "ComfyUI-HandyNodes-KT"
description = "Handy Nodes - TKVideoUserInputs, TKSmartAudioChunker, TKAudioSpeakerTalkTime, TKPromptEnhanced"
version = "1.1.3"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/trashkollector/TKNodes"

[tool.comfy]
PublisherId = "trashkollector"
DisplayName = "ComfyUI Handy Nodes"
Icon = ""

