[project]
name = "ComfyUI-HandyNodes-KT"
description = "Handy Nodes - TKPromptEnhanced, TKVideoUserInputs, TKVideoAudioFuse, TKAudioFuse, TKSamplerUserInputs"
version = "1.2.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/trashkollector/TKNodes"

[tool.comfy]
PublisherId = "trashkollector"
DisplayName = "ComfyUI Handy Nodes"
Icon = ""

